<resources>

    <string name="app_name">Weather</string>
    <string name="add_city">Add City</string>
    <string name="delete_city">Are you sure you want to delete this city?</string>
    <string name="delete_all_cities">Are you sure you want to delete all your saved cities?</string>
    <string name="delete_all">Clear All Cities</string>
    <string name="system_unit">Choose Unit System</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="choose_language">Choose Language</string>
    <string name="email_us">Have a question or feedback? Contact Us</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>
    <string name="yes">Yes</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="help">help</string>
    <string name="settings">settings</string>
    <string name="added">added</string>
    <string name="add_new_city">Add new city first</string>
    <string name="click_map_add_city">Click anywhere on map to add city</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="please_wait">Please wait</string>
    <string name="problem_internet_connection">There is a problem in Internet Connection</string>
    <string name="no_location_found">Sorry, no location found</string>
    <string name="open_weather_map_id">c6e381d8c7ff98f0fee43775817cf6ad</string>
    <string name="google_maps_api_key">AIzaSyCqRRgYesnL7FLNpOyidATpWNCi6ov-CMg</string>


</resources>
